# NAV2Tutorial

./: README.md  new.md
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  run.sh
docker/assets/: entry_script.sh
docker/requirements/: apt-requirements.txt  python-requirements.txt  ros-requirements.txt
docs/: README copy 2.md  README copy 3.md  README.md
workspace/: config.rviz
workspace/nav2_operations_bringup/: CMakeLists.txt  package.xml
workspace/nav2_operations_bringup/config/: nav2_params.yaml  nav2_params_predefined.yaml
workspace/nav2_operations_bringup/config/bt/: follow_path_with_operations.xml  nav2_predefined.xml  navigate_with_operations.xml  predefined_operations.xml
workspace/nav2_operations_bringup/launch/: operations_launch.py  predefined_operations_launch.py
workspace/nav2_operations_bt_nodes/: CMakeLists.txt  nav2_tree_nodes.xml  package.xml
workspace/nav2_operations_bt_nodes/include/nav2_operations_bt_nodes/: bt_conversions.hpp
workspace/nav2_operations_bt_nodes/include/nav2_operations_bt_nodes/action/: cancel_operation_action.hpp  execute_operation_action.hpp  pause_operations_server.hpp  resume_operations_server.hpp  set_blade_state.hpp  set_camera_yaw.hpp
workspace/nav2_operations_bt_nodes/include/nav2_operations_bt_nodes/decorator/: operation_updater_node.hpp
workspace/nav2_operations_bt_nodes/src/action/: cancel_operation_action.cpp  execute_operation_action.cpp  my_follow_path.cpp  pause_operations_server.cpp  resume_operations_server.cpp  set_blade_state.cpp  set_camera_yaw.cpp
workspace/nav2_operations_bt_nodes/src/decorator/: operation_updater_node.cpp
workspace/nav2_operations_msgs/: CMakeLists.txt  package.xml
workspace/nav2_operations_msgs/action/: BladeCommand.action  CameraCommand.action  ExecuteOperation.action  FollowPathWithOperations.action  NavigateWithOperations.action
workspace/nav2_operations_msgs/msg/: OperationAtPose.msg  OperationCommand.msg
workspace/nav2_operations_navigator/: CMakeLists.txt  package.xml  plugins.xml
workspace/nav2_operations_navigator/include/nav2_operations_navigator/: navigate_with_operations.hpp
workspace/nav2_operations_navigator/src/: navigate_with_operations.cpp
workspace/nav2_operations_plugins/: CMakeLists.txt  package.xml  plugins.xml
workspace/nav2_operations_plugins/include/nav2_operations_plugins/: control_rotor.hpp  set_camera_yaw.hpp
workspace/nav2_operations_plugins/src/: control_rotor.cpp  set_camera_yaw.cpp
workspace/nav2_operations_server/: CMakeLists.txt  package.xml
workspace/nav2_operations_server/include/nav2_operations_server/: operation.hpp  operations_server copy.hpp  operations_server.hpp
workspace/nav2_operations_server/src/: main copy.cpp  operations_server copy.cpp  operations_server.cpp
workspace/nav2_operations_servers/: CMakeLists.txt  package.xml
workspace/nav2_operations_servers/include/nav2_operations_servers/: blade_server.hpp  camera_server.hpp
workspace/nav2_operations_servers/src/: blade_server.cpp  camera_server.cpp
workspace/nav2_operations_test_nodes/: CMakeLists.txt  package.xml
workspace/nav2_operations_test_nodes/include/nav2_operations_test_nodes/: blade_simulator.hpp  camera_simulator.hpp  fake_robot.hpp
workspace/nav2_operations_test_nodes/scripts/: rviz_goal_client.py
workspace/nav2_operations_test_nodes/src/: blade_simulator.cpp  camera_simulator.cpp  fake_robot.cpp
