<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_operations_bringup</name>
  <version>0.1.0</version>
  <description>Bringup package for Nav2 Operations Server tutorial — config, launch, BT trees</description>
  <maintainer email="bbipki@proton.me">Dmitriy</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_common</exec_depend>
  <exec_depend>nav2_operations_server</exec_depend>
  <exec_depend>nav2_operations_plugins</exec_depend>
  <exec_depend>nav2_operations_bt_nodes</exec_depend>
  <exec_depend>nav2_operations_navigator</exec_depend>
  <exec_depend>nav2_operations_test_nodes</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
