<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_operations_plugins</name>
  <version>0.1.0</version>
  <description>Example operation plugins for Nav2 Operations Server — ControlRotor and SetCameraYaw</description>
  <maintainer email="bbipki@proton.me">Dmitriy</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>pluginlib</depend>
  <depend>std_msgs</depend>
  <depend>nav2_operations_msgs</depend>
  <depend>nav2_operations_server</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
